--- a/audios.conf
+++ b/audios.conf
@@ -1,3 +1,3 @@
 #Datos configuracion Audios
-#Wed Nov 12 01:23:39 CET 2025
-ultimaRutaExportada=C\:\\Users\\HOME\\Desktop\\fichero.xml
+#Thu Nov 13 00:23:43 CET 2025
+ultimaRutaExportada=C\:\\Users\\HOME\\Documents\\sip
