--- a/audios.conf
+++ b/audios.conf
@@ -1,3 +1,3 @@
 #Datos configuracion Audios
-#Thu Nov 13 00:23:43 CET 2025
-ultimaRutaExportada=C\:\\Users\\HOME\\Documents\\sip
+#Thu Nov 13 13:41:46 CET 2025
+ultimaRutaExportada=C\:\\Users\\erwin\\OneDrive\\Escritorio\\dam2\\verLos4
