--- a/audios.conf
+++ b/audios.conf
@@ -1,3 +1,3 @@
 #Datos configuracion Audios
-#Thu Nov 13 13:41:46 CET 2025
-ultimaRutaExportada=C\:\\Users\\erwin\\OneDrive\\Escritorio\\dam2\\verLos4
+#Thu Nov 13 23:21:45 CET 2025
+ultimaRutaExportada=C\:\\Users\\HOME\\Desktop\\lolo
