--- a/audios.conf
+++ b/audios.conf
@@ -1,3 +1,3 @@
 #Datos configuracion Audios
-#Thu Nov 13 23:21:45 CET 2025
-ultimaRutaExportada=C\:\\Users\\HOME\\Desktop\\lolo
+#Fri Nov 14 00:42:20 CET 2025
+ultimaRutaExportada=C\:\\Users\\HOME\\Desktop\\los4
